hphp/test/zend/good/ext/soap/tests/bugs/bug36614.php
<?php
$lo_soap = new SoapClient(dirname(__FILE__)."/bug36614.wsdl");
echo "ok\n";
?>